feat: add advanced profiling and inference evaluation